DFG CFA doesn't filter precisely enough for CompareStrictEq https://bugs.webkit.org/show_bug.cgi?id=109618

Reviewed by Mark Hahnenberg.

The backend speculates object for this case, but the CFA was filtering on
(SpecCell & ~SpecString) | SpecOther.

* dfg/DFGAbstractState.cpp:
(JSC::DFG::AbstractState::execute):



Canonical link: https://commits.webkit.org/127906@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142679 268f45cc-cd09-0410-ab3c-d52691b4dbfc